--- a/101-boot-microservice-onebyone/pom.xml
+++ b/101-boot-microservice-onebyone/pom.xml
@@ -10,82 +10,82 @@
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
     </properties>
-    
+
     <dependencyManagement>
         <dependencies>
             <dependency>
                 <!-- Import dependency management from Spring Boot -->
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-dependencies</artifactId>
-                <version>1.3.0.M1</version>
+                <version>1.3.3.RELEASE</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
-        
+
         </dependencies>
     </dependencyManagement>
 
-     <dependencies>
-        <!-- Spring Boot Admin 
+    <dependencies>
+        <!-- Spring Boot Admin
         <dependency>
             <groupId>de.codecentric</groupId>
             <artifactId>spring-boot-admin-starter-client</artifactId>
             <version>1.2.3</version>
         </dependency>-->
-        
-        <!-- Production ready monitoring and utilities 
-        <dependency> 
+
+        <!-- Production ready monitoring and utilities
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-actuator</artifactId>
         </dependency> -->
-        
+
         <!-- Full-stack web-dev, Tomcat, webmvc -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
-        
+
         <!-- Java Persistence API, spring-data-jpa, spring-orm, hibernate -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
         </dependency>
-        
+
         <!-- spring-data repos exposed as REST repositories -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-rest</artifactId>
-        </dependency> 
-        
-        <!-- HAL and JSON 
+        </dependency>
+
+        <!-- HAL and JSON
         <dependency>
-            <groupId>org.springframework.boot</groupId> 
+            <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-hateoas</artifactId>
         </dependency> -->
-        
-        <!-- Testing dependencies 
+
+        <!-- Testing dependencies
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency> -->
-        
+
         <!-- Embedded DB -->
-        <dependency> 
+        <dependency>
             <groupId>com.h2database</groupId>
             <artifactId>h2</artifactId>
             <scope>runtime</scope>
         </dependency>
-           
+
         <!-- Use Inject instead of Autowired. -->
         <dependency>
             <groupId>javax.inject</groupId>
             <artifactId>javax.inject</artifactId>
             <version>1</version>
         </dependency>
-        
-        
-        <!-- ACTIVATE JSF!!! 
+
+
+        <!-- ACTIVATE JSF!!!
         <dependency>
             <groupId>com.sun.faces</groupId>
             <artifactId>jsf-api</artifactId>
@@ -106,20 +106,20 @@
             <artifactId>primefaces</artifactId>
             <version>5.2</version>
         </dependency>
-        <dependency>  
-            <groupId>org.primefaces.themes</groupId>  
-            <artifactId>excite-bike</artifactId>  
-            <version>1.0.10</version>  
+        <dependency>
+            <groupId>org.primefaces.themes</groupId>
+            <artifactId>excite-bike</artifactId>
+            <version>1.0.10</version>
         </dependency> -->
         <!-- DONE ACTIVATE JSF!!! DONE -->
 
 
-        <!-- Will be needed for the ConfigureListener (JSF) 
+        <!-- Will be needed for the ConfigureListener (JSF)
         <dependency>
             <groupId>org.apache.tomcat.embed</groupId>
             <artifactId>tomcat-embed-jasper</artifactId>
         </dependency> -->
-        
+
     </dependencies>
 
     <build>
